# TalosForge

./: README.md  TalosForge.sln
.github/workflows/: ci.yml
artifacts/dev-stack/: state.json
docs/: README.md  adapter-bridge.md  architecture.md  handoff-next-dev.md  ipc-contract.md  native-agent.md  unlocker-cli-integration.md  unlocker-host.md  wow-testbench.md
scripts/: build-native-agent.ps1  clean.ps1  dev-stack.ps1  probe-wow-agent-overlay.ps1  soak-wow-agent.ps1  sync-polyhook.ps1  verify-docs.ps1  wow-testbench.ps1
src/AdapterBridge/: Program.cs
src/AdapterBridge/Execution/: IBridgeCommandExecutor.cs  MockBridgeCommandExecutor.cs  ProcessBridgeCommandExecutor.cs  WowAgentBridgeCommandExecutor.cs  WowCliBridgeCommandExecutor.cs  WowCliCommandTranslator.cs
src/AdapterBridge/Models/: AdapterPipeProtocol.cs  (+1 more)
src/Core/: MemoryReader.cs  Offsets.cs  PointerChainResolver.cs  Program.cs  TalosForge.Core.csproj
src/UnlockerAgent.Native/: CMakeLists.txt
src/UnlockerAgent.Native/include/: AntiDetection.h  HWBPManager.h  HookRegistry.h  Logger.h  UnlockerAgentExports.h  VEHHandler.h  WoWHooks.h
src/UnlockerAgent.Native/src/: AntiDetection.cpp  HWBPManager.cpp  HookRegistry.cpp  Logger.cpp  ThreadEnumerator.cpp  UnlockerAgentExports.cpp  VEHHandler.cpp  WoWHooks.cpp
src/UnlockerAgentHost/: Program.cs  TalosForge.UnlockerAgentHost.csproj
src/UnlockerCli/: CommandTranslator.cs  Program.cs  WowLuaRemoteExecutor.cs
src/UnlockerHost/: Program.cs  TalosForge.UnlockerHost.csproj
tests/TalosForge.Tests/: TalosForge.Tests.csproj  xunit.runner.json
(+102 files in other folders)
